# sdu-cpp-course-25

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile.sh  desktop  finance.txt  reminder.txt
include/: Crypto.h  DesktopAssistant.h  Records.h  Utils.h
src/: .clangd  Crypto.cpp  DesktopAssistant.cpp  Utils.cpp  main.cpp
